--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ idna==3.10
 magic-filter==1.0.12
 multidict==6.6.3
 propcache==0.3.2
+psycopg2==2.9.10
 pydantic==2.11.7
 pydantic_core==2.33.2
 python-dotenv==1.1.1
